--- a/demo.ipynb
+++ b/demo.ipynb
@@ -265,10 +265,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !python -W ignore eval.py --checkpoint pretrained/AWE/version_0/AWE-epoch=0.ckpt\n",
-    "# !python -W ignore eval.py --checkpoint pretrained/LSTM/version_0/LSTM-epoch=0.ckpt\n",
-    "# !python -W ignore eval.py --checkpoint pretrained/BiLSTM/version_0/BiLSTM-epoch=0.ckpt\n",
-    "# !python -W ignore eval.py --checkpoint pretrained/BiLSTM-MaxPool/version_0/BiLSTM-MaxPool-epoch=0.ckpt"
+    "# !python -W ignore eval.py --encoder AWE\n",
+    "# !python -W ignore eval.py --encoder LSTM\n",
+    "# !python -W ignore eval.py --encoder BiLSTM\n",
+    "# !python -W ignore eval.py --encoder BiLSTM-MaxPool"
    ]
   },
   {
